<resources>
    <string name="app_name">shoppingmall</string>
    <string name="welcome">OO商城</string>
    <string name="title_login">登入或現在就註冊體驗吧！</string>
    <string name="button_login">登入帳號</string>
    <string name="button_register">註冊帳號</string>
    <string name="title_register">註冊帳號</string>
    <string name="hint_input_login_account">請輸入您的帳號</string>
    <string name="hint_input_login_password">請輸入您的密碼</string>
    <string name="label_login_account">帳號</string>
    <string name="label_login_password">密碼</string>
    <string name="hint_input_register_account">長度限制45</string>
    <string name="hint_input_register_password">長度限制45</string>
    <string name="label_register_account">帳號</string>
    <string name="label_register_password">密碼</string>
    <string name="label_register_realname">姓名</string>
    <string name="label_register_address">地址</string>
    <string name="hint_input_register_realname">請輸入您的大名</string>
    <string name="hint_input_register_address">限中華民國境內地址</string>
    <string name="button_reset">清除重填</string>
    <string name="title_activity_shop">Shop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">商品列表</string>
    <string name="menu_search">商品搜尋</string>
    <string name="menu_order">訂單查詢</string>
    <string name="menu_member">會員專區</string>
    <string name="title_home">商品列表</string>
    <string name="title_search">商品搜尋</string>
    <string name="title_order">訂單查詢</string>
    <string name="title_member">會員專區</string>
    <string name="lebel_nav_home">首頁</string>
    <string name="lebel_nav_search">搜尋</string>
    <string name="lebel_nav_order">訂單</string>
    <string name="lebel_nav_settings">設定</string>
    <string name="lebel_search_name">品名</string>
    <string name="lebel_search_category">類別</string>
    <string name="lebel_search_price">價格區間</string>
    <string name="lebel_search_range">~</string>
    <string name="hint_input_search_pircemin">最小值</string>
    <string name="hint_input_search_pircemax">最大值</string>
    <string name="button_search_serach">搜尋</string>
    <string name="button_search_reset">重設</string>
    <string name="lebel_product_name">品名:</string>
    <string name="lebel_product_category">類別:</string>
    <string name="lebel_product_desc">描述:</string>
    <string name="template_product_name">Name Template</string>
    <string name="template_product_category">Category Template</string>
    <string name="template_product_desc">This is a Template</string>
    <string name="template_product_price">This is a Template</string>
    <string name="template_product_stock">This is a Template</string>
    <string name="button_product_submit">加入購物車</string>
    <string name="button_product_follow">加入追蹤</string>
    <string name="button_order_submit">送出訂單</string>
    <string name="button_order_remove">移除商品</string>
    <string name="button_order_confirm_submit">結帳</string>
    <string name="button_order_confirm_back">重選商品</string>
    <string name="button_order_success_home">逛逛更多好物</string>
    <string name="button_order_success_myorder">前往我的訂單</string>
    <string name="template_settings_greeting">歡迎，%realname%</string>
    <string name="lebel_settings_myorder">我的訂單</string>
    <string name="lebel_settings_myfollow">我的追隨</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="button_settings_logout">登出</string>
    <string name="lebel_product_stock">庫存:</string>
    <string name="lebel_product_price">建議售價:</string>
    <string name="text_order_confirm_total">共計</string>
    <string name="button_settings_order">瀏覽全部</string>
    <string name="button_settings_follow">瀏覽全部</string>
</resources>