<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/statusbar" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/navbar" />

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="530dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        app:cardBackgroundColor="@color/background_login"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_register_passwordVisible"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:onClick="action_register"
                android:text="👁"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/input_login_password"
                app:layout_constraintEnd_toEndOf="@+id/input_login_password"
                app:layout_constraintTop_toTopOf="@+id/input_login_password" />

            <EditText
                android:id="@+id/input_register_address"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/hint_input_register_address"
                android:inputType="textPersonName"
                android:textColor="@color/string"
                android:textColorHint="@color/String_Hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_register_address"
                android:textColor="@color/string"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_realname" />

            <EditText
                android:id="@+id/input_register_realname"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/hint_input_register_realname"
                android:inputType="textPersonName"
                android:textColor="@color/string"
                android:textColorHint="@color/String_Hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_register_realname"
                android:textColor="@color/string"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_login_password" />

            <EditText
                android:id="@+id/input_login_password"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/hint_input_register_password"
                android:inputType="textPassword"
                android:textColor="@color/string"
                android:textColorHint="@color/String_Hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:text="@string/label_register_password"
                android:textColor="@color/string"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_account" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/title_register"
                android:textColor="@color/string"
                android:textSize="26sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/title_register" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:layout_marginTop="16dp"
                android:text="@string/label_register_account"
                android:textColor="@color/string"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/input_register_account"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/hint_input_register_account"
                android:inputType="textPersonName"
                android:outlineProvider="none"
                android:textColor="@color/string"
                android:textColorHint="@color/String_Hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <Button
                android:id="@+id/button_register_register"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="13dp"
                android:background="@drawable/coolbtn"
                android:onClick="action_register"
                android:text="@string/button_register"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_register_address" />

            <TextView
                android:id="@+id/error_register"
                android:layout_width="292dp"
                android:layout_height="17dp"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:textColor="@color/Error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:text="錯誤訊息" />

            <Button
                android:id="@+id/button_register_reset"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="13dp"
                android:onClick="action_register"
                android:text="@string/button_reset"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_register_register" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="482dp"
        android:layout_height="357dp"
        app:srcCompat="@drawable/loginbg" />

</android.support.constraint.ConstraintLayout>